--- a/pages/searchVideo/searchVideo.wxss
+++ b/pages/searchVideo/searchVideo.wxss
@@ -1,2 +1,1 @@
-/* pages/searchVideo/searchVideo.wxss */
-@import "../../wxSearchView/wxSearchView.wxss"
+@import "../../wxSearchView/wxSearchView.wxss";
