--- a/wxSearchView/wxSearchView.wxml
+++ b/wxSearchView/wxSearchView.wxml
@@ -10,7 +10,7 @@
   </view>
     <view class="weui-search-bar__cancel-btn" bindtap="wxSearchConfirm">
          <text wx:if="{{wxSearchData.value.length>0}}" data-key='search'>搜索</text>
-         <text wx:else data-key='back'>主页</text>
+         <text wx:else data-key='back'>返回</text>
      </view>
 </view>
 
