--- a/pages/videoInfo/videoInfo.wxml
+++ b/pages/videoInfo/videoInfo.wxml
@@ -1,6 +1,6 @@
 <!--pages/videoInfo/videoInfo.wxml-->
 <view style="width:100%;;height:100%">
-  <video src="http://192.168.1.10:8081/190805GYC4AY8ACH/video/0e89c440-1f8e-45ec-96d4-a50617cd1d95.mp4" muted="{{false}}" controls="{{true}}" autoplay="{{false}}" loop="{{true}}" enable-progress-gesture="{{false}}" style='width:100%;height:100%;' objectFit='{{cover}}'>
+  <video id="myVideo" src="{{src}}" muted="{{false}}" controls="{{true}}" autoplay="{{false}}" loop="{{flase}}" enable-progress-gesture="{{false}}" style='width:100%;height:100%;' objectFit='{{cover}}'>
 
     <cover-view class='container'>
       <!-- 上传视频 -->
@@ -16,7 +16,7 @@
 
     <cover-view class='container-me'>
       <!-- 头像 -->
-      <!-- <cover-image class="face" src='{{serverUrl}}{{publisher.faceImage}}' bindtap='showPublisher'></cover-image> -->
+      <cover-image wx:if="{{serverUrl}}{{publisher.faceImage}}" class="face" src='{{serverUrl}}{{publisher.faceImage}}' bindtap='showPublisher'></cover-image>
 
 
       <!-- 喜欢收藏按钮 -->
